# inbox-to-caldav-resourcecalendar

./: .gitignore  README.md  config.example.toml  main.py  pyproject.toml
docs/: IMPLEMENTATION.md  REQUIREMENTS.md
inbox_to_caldav/: __init__.py  approval.py  caldav_store.py  config.py  imap_client.py  imip.py  pipeline.py  policy.py  routing.py  smtp_out.py
