[project]
name = "inbox-to-caldav-resourcecalendar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "caldav>=3.2.1",
    "dotenv>=0.9.9",
    "icalendar>=7.2.0",
    "icecream>=2.2.0",
    "recurring-ical-events>=3.8.2",
    "ruff>=0.15.20",
]
